feat(x-lite): add post filter rule editor